# paparazzi

./: .gdbinit  .gitignore  .gitmodules  .paths  BRANCH_INFO  CONTRIBUTING.md  Doxyfile  Makefile  Makefile.ac  README.md  checklist.sh  dhcp.sh  editor.ini  fix_code_style.sh  goto_field.sh  how_to_update_to_master_from_v4_2.txt  issues_found_while_testing.txt  lisa.files  lisa.includes  paparazzi.sublime-project  parse_logs.py  photolist.sh  photolist_time.sh  photolist_time_utm.sh  vision.sh
TUDelft/: export.sh  git_to_svn.sh  ps1.txt  replace_in_files.sh  svn.sh
allthings_obc2014/: Makefile  README.md
allthings_obc2014/src/: ivy2nmea
conf/: Makefile.arm-linux  Makefile.arm-linux-toolchain  Makefile.arm-none-linux-gnueabi  Makefile.bebop  Makefile.omap  Makefile.omap_ardrone2  Makefile.stm32  Makefile.stm32-upload  abi.xml  autoswarm_conf.xml  autoswarm_control_panel.xml  conf.multiardrones.xml  conf.xml  conf.xml.example  conf.xml.tri  conf.xml.tudelft  conf_example.xml  conf_tests.xml  conf_tests_coverity.xml  control_panel.xml  control_panel.xml.bak  control_panel.xml.example  control_panel_example.xml  messages.dtd  messages.xml  messages.xml.ardru  mtk.dtd  sirf.dtd  sirf.xml  tudelft_conf.xml  ubx.xml
conf/KM/: km_conf.xml  km_control_panel.xml
conf/OpenUAS/: conf_openuas_obc2014.xml  openuas_conf_obc2014.xml  openuas_control_panel_obc2014.xml
conf/TUDELFT/: tudelft_rm_conf.xml
conf/airframes/: ardrone2.xml  ardrone2_indi.xml  ardrone2_opticflow_hover.xml  ardrone2_practical.xml  ardrone2_raw.xml  ardrone2_raw_optitrack_original.xml  ardrone2_simulink.xml  ardrone2_vision.xml  bebop.xml  bebop_indi.xml  bebop_indi.xml.2015-02-03_124516  bebop_opticflow.xml  easystar_ets_example.xml  example_transitioning.xml  fraser_lisa_m_rotorcraft.xml  ladybird_indi.xml  openuas_ardrone2_raw_vision.xml  reorg.sh
conf/autopilot/: rotorcraft.makefile
conf/boards/: ardrone2.makefile  classix.makefile  lisa_l_1.0.makefile  lisa_m_1.0.makefile  lisa_m_2.0.makefile  opa_ap_1.0.makefile  opa_ftd_1.0.makefile  picoquad_1.0.makefile  rollingspider.makefile
conf/firmwares/: lisa_test_progs.makefile  rotorcraft.makefile  test_progs.makefile
conf/flight_plans/: SkySeg2_fp.xml  basic.xml  (+22 more)
devo10/: model2.ini
sw/tools/TUDelft/qrcodelist/: CMakeLists.txt  Makefile  qrcodelist.cpp
sw/tools/photolist/: CMakeLists.txt  Makefile  photolist.cpp  photolist.h
sw/tools/photolist/math/: CMakeLists.txt  Conversions.cpp  Conversions.h  gps_time.cpp  gps_time.h  matrix.h
sw/tools/photolist/math/llh_utm/: constants.h
(+1412 files in other folders)
